# expenses-api

./: .gitignore  CONTRIBUTING.md  README.md  expenses.db  pyproject.toml
src/expenses_api/: __init__.py  crud.py  database.py  deps.py  main.py  models.py  repositories.py  schemas.py  security.py  seed.py  settings.py
src/expenses_api/routers/: auth.py  categories.py  expenses.py
src/expenses_api/tests/: conftest.py  test_crud.py  test_repositories.py  test_routers.py
