[project]
name = "expenses-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leonel Noan", email = "leonelndongmonoan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
expenses-api = "expenses_api:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
