[project]
name = "expenses-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leonel Noan", email = "leonelndongmonoan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "aiosqlite>=0.21.0",
    "fastapi>=0.121.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "faker>=38.2.0",
]

[project.scripts]
expenses-api = "expenses_api:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
